--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^8.4.1",
     "openai": "^4.51.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "serpapi": "^2.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
