--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "date-fns": "^3.6.0",
     "mongoose": "^8.4.1",
     "openai": "^4.51.0",
     "reflect-metadata": "^0.2.0",
